[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = { version = "2.0.4", features = [] }
itertools = { version = "0.12.0", features = [] }
regex-macro = { version = "0.2.0", features = [] }
strum_macros = "0.25.3"
regex = { version = "1.10.2", features = [] }
num = "0.4.1"
rayon = "1.8.0"
